# tct

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  UBIQUITOUS_LANGUAGE.md  build.rs
.github/workflows/: release.yml
docs/: arc42.md  architecture.md  user-guide.md
docs/adr/: 0001-board-editor-aggregate.md  0002-command-enum-scope.md  0003-dialog-and-insert-as-traits.md  0004-board-directory.md  0005-keymap-tables.md  0006-card-owned-list-membership.md
docs/agents/: domain.md
docs/vhs/: check.sh  demo.tape  linux-tty.tape  seed.sh
src/: app.rs  board_directory.rs  board_editor.rs  cli.rs  command.rs  event.rs  main.rs  term_caps.rs  test_support.rs
src/cli/: boards.rs  cards.rs  checklist.rs  labels.rs  lists.rs  lookup.rs  mod.rs  search.rs  util.rs
src/dialog/: archived_boards.rs  archived_cards.rs  archived_lists.rs  card_history.rs  color_picker.rs  common.rs  confirm_archive_board.rs  confirm_archive_card.rs  confirm_archive_list.rs  confirm_cancel_edit.rs  confirm_delete_label.rs  label_manager.rs  label_picker.rs  mod.rs
src/input/: board_selector_input.rs  card_detail_input.rs  command.rs  dialog_input.rs  insert.rs  keymap.rs  mod.rs  normal.rs
src/insert/: date_picker.rs  line_editor.rs  line_input.rs  markdown_editor.rs  mod.rs  text_area_input.rs
src/model/: board.rs  card.rs  ids.rs  label.rs  list.rs  mod.rs
src/storage/: board_store.rs  card_store.rs  list_store.rs  migrate.rs  mod.rs  paths.rs
src/ui/: board_selector.rs  board_view.rs  card_detail.rs  dialog.rs  markdown.rs  mod.rs  search_bar.rs  theme.rs  (+2 more)
tests/: cli_examples.rs
(+33 files in other folders)
