[package]
name = "tct"
version = "0.1.0"
edition = "2024"
description = "Terminal Card Tracker - a keyboard-driven TUI Trello clone"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "6.0"
thiserror = "2.0.18"
ratatui-textarea = "0.9"
regex = "1"
arboard = "3.4"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
insta = "1.48.0"
tempfile = "3.27.0"
